# slicer

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  diesel.toml  package-lock.json  package.json  readme.md
.github/workflows/: release.yml  rust.yml  web-export.yaml
Documentation/: MVP 3e33bc9f89e9403ab0c1e2598e21ac5d.md  why.md
app/: client.imba  index.html  renderer.imba
app/mvp/: fake-data.imba
app/mvp/importer/: importer.imba
migrations/2024-11-30-153200_create_startup/: down.sql  up.sql
mvp/: fake-data.imba
src/: main.rs  schema.rs
src/db/: connection.rs  mod.rs  models.rs  repository.rs
src/ui/: app.rs  mod.rs
src/utils/: mod.rs  single_instance.rs  system.rs
voracious/: app.json  package.json
